--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-particles-js": "^2.1.0",
     "react-scripts": "1.1.1"
   },
   "scripts": {
