clarifai API added, API key added... trying to get the URL request setup... || @ashish

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
-{
+  {
   "name": "facerecognition",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "clarifai": "^2.6.0",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-particles-js": "^2.1.0",
