--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
-  {
+{
+  "homepage": "http://ashishcodes4.github.io/faceRecognition1.0.1",
   "name": "facerecognition",
   "version": "0.1.0",
   "private": true,
@@ -13,9 +14,12 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "devDependencies": {
+    "gh-pages": "^1.1.0",
     "tachyons": "^4.9.1"
   }
 }
