made changes to package.json, added github pages

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://ashishcodes4.github.io/faceRecognition1.0.1",
+  "homepage": "http://ashishcodes4.github.io/faceRecognition1.0.1/",
   "name": "facerecognition",
   "version": "0.1.0",
   "private": true,
