--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-particles-js": "^2.1.0",
-    "react-scripts": "1.1.1"
+    "react-scripts": "1.1.1",
+    "react-tilt": "^0.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
